2011-04-06  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm, src/win/wgnuplib.h, src/win/wgraph.c: Use UINTs
	instead of DWORDs in struct GWOP.

2011-04-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/graphics.c src/term_api.h:  Add layering flags
	for BEGIN/END KEYSAMPLE.
	
	* term/js/gnuplot_svg.js term/svg.trm: Elementary mousing support for
	the svg terminal based on Patches #2477391 #2478169 (yeah, those are
	from 2 years ago).  Toggle plot on/off in response to mouse click on
	the corresponding key entry.

	* demo/html/Makefile.svg demo/html/index.svg demo/html/webify_svg.pl:
	Revise the svg demo set to use mousing.

2011-04-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (ifilled_quadrangle): See note in the code.  For some
	reason this fixes rendering of pm3d surfaces in the svg terminal.

2011-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm demo/html/mousebox.template term/js/gnuplot_mouse.js:
	Incorporate the plot name (from 'set term canvas name "foo") into the
	flag used by the toggleVisibility() routine so that plots in other
	canvas elements on the same page are not affected.

2011-04-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c src/term.h term/Makefile.am.in term/lua.trm
	term/write_png_image.c:  Move the routine write_png_image() out of
	lua.trm so that it can be shared by other terminal drivers.
	It requires support from either libgd or cairo, and provides bitmapped
	image support to the lua terminals and (in prospect) to the HTML5
	canvas terminal.

	* src/save.c: Echo most recent range of autoscaled axes on "show" but
	not "save".  This simplifies the output of gpsavediff in most cases.

	* gnuplot-cvs/term/js/gnuplot_mouse.js term/js/gnuplot_common.js
	gnuplot-cvs/term/canvas.trm (CANVAS_image):
	Implement support for image handling in the canvas terminal using the
	HTML5 canvas primitive drawImage().  Image data is written to a png file